@@ -1,3 +1,5 @@
+* Add description on write-off move
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 * Add balance non-deferral wizard
